<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Lig-Aikuma</string>
    <string name="search">Search</string>
    <string name="settings">General Settings</string>
    <string name="sync">Sync</string>
    <string name="record">Recording</string>
    <string name="mainlist">Main list</string>
    <string name="addLanguage">Add Language</string>
    <string name="recording_description">Recording name</string>
    <string name="share_dialog">			Your recording will be shared with everybody. Share?</string>
    <string name="discard_dialog">			Are you sure you want to discard this recording?</string>
    <string name="share">Share</string>
    <string name="cancel">Cancel</string>
    <string name="discard">Discard</string>
    <string name="restart_recording">Are you sure you want to discard this 
			recording and start a new recording?</string>
    <string name="defaultLangHeading">Default languages used when adding a
			speaker</string>
	<string name="speaker_name">Name
			</string>
	<string name="add_iso_language">Add language from list </string>
	<string name="add_custom_language">Add Custom Language </string>
	<string name="take_photo">Take photo (necessary)</string>
	<string name="thumb_respeaking">Thumb commentary</string>
	<string name="phone_respeaking">Voice-activated commentary</string>
	<string name="syncSettingsHeader">Connect this phone to</string>
	<string name="ipAddressHint">IP Address</string>
	<string name="usernameHint">Username</string>
	<string name="passwordHint">Password</string>
	<string name="syncNow">Sync now</string>
	<string name="help">Help</string>
	<string name="speakers">Speakers</string>
	<string name="language_name">Language name</string>
	<string name="about">About</string>
	<string name="connect">HTTP Server</string>
	<string name="gplus_signin_menu_label">Google Sign-in</string>
	<string name="cloud_sync_label">GoogleCloud Sync</string>
	<string name="cloud_sync_setting_label">GoogleCloud Settings</string>
	<string name="ftp_sync_setting_label">FTP Sync Settings</string>
	<string name="language_setting_label">Language Settings</string>
	<string name="indexing_label">Item Re-indexing</string>
	<string name="http_dialog_success">Server started at port %1$d</string>
	<string name="http_dialog_failure">Failed to start server</string>
	<string name="http_server_activity_title">HTTP Server</string>
	<string name="http_server_activity_server_status">Server status</string>
	<string name="http_server_activity_host">Host</string>
	<string name="http_server_activity_port">Port</string>
	<string name="http_server_activity_ip">IP address</string>
	<string name="http_ui_start">START</string>
	<string name="http_ui_stop">STOP</string>
	<string name="http_ui_default_port">8080</string>
	<string name="title_activity_debug_info">DebugInfo</string>
	<string name="action_settings">Settings</string>
	<string name="debug_old_aikuma">Old Aikuma</string>
	<string name="metadata_mother_tongue">Mother tongue</string>
	<string name="add_custom_language_or">Add custom language or add from list</string>
	<string name="select_from_list">Select from list</string>
	<string name="spoken_languages">Spoken languages</string>
	<string name="second_language">Second language</string>
	<string name="more_languages">More languages</string>
	<string name="extra_information">Extra information</string>
	<string name="region_origin">Region of origin</string>
	<string name="region_origin_edit">Type in your region of origin</string>
	<string name="personal_information">Personal information</string>
	<string name="age">Age</string>
	<string name="age_edit">Type in your age</string>
	<string name="gender">Gender</string>
	<string name="radio_male">Male</string>
	<string name="radio_female">Female</string>
	<string name="speaker_name_edit">Type in your name</string>
	<string name="button_ok">Ok</string>
	<string name="metadata_save">Save these settings into a session for the next recordings</string>
	<string name="session_change">Start a recording with a different session</string>
	<string name="respeak">Respeaking</string>
	<string name="recording_metadata">Reminder of the recording Metadata</string>
	<string name="respeak_meta_record_lang">Language of the recording</string>
	<string name="respeak_meta_extra_lang">Extra spoken languages</string>
	<string name="respeak_meta_spkr_info">Speaker details</string>
	<string name="respeaking_metadata">Respeaking metadata</string>
	<string name="respeaking_lang">Respeaking\nlanguage</string>
	<string name="more_languages_shorten">+ Lang.</string>
	<string name="speaker_info">Speaker Information</string>
	<string name="tradBtn">Translating</string>
    <string name="elicitBtn">Elicitation</string>
    <string name="welcome">Welcome on Lig-Aikuma</string>
    <string name="selectaMode">Please select a mode below</string>
    <string name="respeak_previous_segment">Latest Segment</string>
    <string name="respeakmode">Respeaking mode</string>
    <string name="selectanImportType">Please select from where you want to import the audio file</string>
    <string name="audio_import_from_phone">Import Audio From Phone</string>
    <string name="audio_import_from_aikuma">Import Audio From Aikuma</string>
    <string name="elicitationMode">Elicitation mode</string>
    <string name="selectanElicitMode">Please select an elicitation type below</string>
    <string name="elicitText">Elicitation By Text</string>
    <string name="text_import_from_phone">Import Text From Phone</string>
    <string name="elicitImage">Elicitation By Image</string>
    <string name="image_import_from_phone">Import Image From Phone</string>
    <string name="elicitVideo">Elicitation By Video</string>
    <string name="video_import_from_phone">Import Video From Phone</string>
    <string name="goBack"> Return</string>
    <string name="metadata_selected_language"></string>
    <string name="recordingLanguage">Language of\nthe recording</string>
    <string name="RecordingMetadataTitle">Informations about the speaker</string>
    <string name="less_languages">Less languages</string>
    <string name="translatemode">Translating Mode</string>
    <string name="checkBtn">Check</string>
    <string name="checkMode">Check mode</string>
    <string name="selectaCheckMode">Please select a verification type below</string>
    <string name="checkVariant">Word Check Variants</string>
    <string name="checkTranscript">Transcription Check</string>
    <string name="userSession">userSession</string>
    <string name="sessionActive">active</string>
    <string name="sessionMode">mode</string>
    <string name="sessionDate">date</string>
    <string name="sessionProgress">progress</string>
    <string name="session_submode">submode</string>
    <string name="sessionCheckImportFile">checkImportFile</string>
    <string name="sessionCheckExportFile">checkExportFile</string>
    <string name="sessionInputFile">inputFile</string>
    
</resources>
