<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent" >

	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:focusable="true"
	    android:focusableInTouchMode="true"
	    android:orientation="vertical"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin" >
	    
	<!-- Back button -->
    <GridLayout
       	android:layout_width="wrap_content"
		android:layout_height="wrap_content" 
		android:layout_gravity="left">
		<Button
			android:id="@+id/btn_goBack"
			android:layout_width="wrap_content"
			android:layout_height="match_parent"
			android:drawableLeft="@drawable/ic_undo_black_24dp"
			android:onClick="onBackPressed"
			android:text="@string/goBack"
			android:textColor="#D32F2F"
			android:layout_marginBottom="20dp" 
			android:layout_marginTop="20dp" />
	</GridLayout>
		
		<TableLayout
		    android:id="@+id/title_layout"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content" >
	    
		    <TextView
		        style="@style/MainTitle" 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/RecordingMetadataTitle"
	            android:layout_marginBottom="20dp"/>
		    <View
		       android:layout_width="match_parent"
		       android:layout_height="0.2dp"
		       android:id="@+id/separator"
		       android:visibility="visible"
		       android:background="@android:color/darker_gray"
		       android:layout_marginBottom="15dp"/> 
		    
		</TableLayout>
	    
	    <LinearLayout
			android:layout_width="match_parent"
    		android:layout_height="match_parent"
	        android:id="@+id/layout_spokenLanguages"
	        android:orientation="vertical" 
	        android:layout_margin="@dimen/activity_horizontal_margin" >

	        <TextView
	            android:id="@+id/tv_spokenLanguages"
	            style="@style/TextviewMetadata1"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:text="@string/spoken_languages"
	            android:layout_marginBottom="30dp" 
	            android:layout_alignParentTop="true" />
	        		        
	        <LinearLayout
	            android:id="@+id/layout_languages"
	            android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            android:orientation="vertical" >
	           
	            <RelativeLayout
		            android:id="@+id/recordingLanguage"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content">

		                <TextView
		                    android:id="@+id/tv_recordingLanguage"
		                    style="@style/TextviewMetadata2"
		                    android:layout_width="100dp"
		                    android:layout_height="wrap_content"
		                    android:text="@string/recordingLanguage"
		                    android:textColor="#6FA9C8"
		                    android:layout_alignParentLeft="true"
		                    android:singleLine="false"
		                    android:lines="2" />
	
						<TextView
		                    android:id="@+id/tv_selectedRecordingLanguage"
		                    android:layout_width="wrap_content"
		                    android:layout_height="wrap_content"
		                    android:textSize="15sp"
							android:layout_marginLeft="5dp"
							android:layout_marginRight="5dp"
		                    android:layout_toLeftOf="@+id/btn_recordingLanguage"
		                    android:layout_toRightOf="@id/tv_recordingLanguage"/>
												
		                <Button
		                    android:id="@+id/btn_recordingLanguage"
		                    android:layout_width="wrap_content"
		                    android:layout_height="wrap_content"
		                    android:onClick="onAddISOLanguageButton"
		                    android:text="@string/select_from_list"
		                    style="@style/ButtonChooseLanguage"
		                    android:layout_alignParentRight="true" />

				 </RelativeLayout>
		      	 <RelativeLayout
		                android:id="@+id/layout_motherTongue"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content" >
				
		                <TextView
		                    android:id="@+id/tv_motherTongue"
		                    android:layout_width="100dp"
		                    android:layout_height="wrap_content"
		                    android:text="@string/metadata_mother_tongue"
		                    style="@style/TextviewMetadata2" 
		                    android:layout_alignParentLeft="true" />
		<!--  OLD version 
		                <EditText
		                    android:id="@+id/et_motherTongue"
		                    android:layout_width="0dp"
		                    android:layout_height="wrap_content"
		                    android:layout_weight="1"
		                    android:ems="10"
		                    android:hint="@string/add_custom_language_or"
		                    android:textSize="12sp" />
		-->
		<!--  New version -->
						<TextView
		                    android:id="@+id/tv_selectedMotherTongue"
		                    android:layout_width="wrap_content"
		                    android:layout_height="wrap_content"
		                    style="@style/TextviewSelectedLanguage"
		                    android:layout_toLeftOf="@+id/btn_chooseLanguage"
		                    android:layout_toRightOf="@id/tv_motherTongue" />
						
		                <Button
		                    android:id="@+id/btn_chooseLanguage"
		                    android:layout_width="wrap_content"
		                    android:layout_height="wrap_content"
		                    android:onClick="onAddISOLanguageButton"
		                    android:text="@string/select_from_list"
		                    style="@style/ButtonChooseLanguage"
		                    android:layout_alignParentRight="true"/>
		            
				</RelativeLayout>
		    	<RelativeLayout
		                android:id="@+id/layout_secondLanguage"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content" > 
		                		
		                <TextView
		                    android:id="@+id/tv_secondLanguage"
		                    android:layout_width="125dp"
		                    android:layout_height="wrap_content"
		                    android:text="@string/second_language"
		                    style="@style/TextviewMetadata2" 
		                    android:layout_alignParentLeft="true" />
		<!--  OLD version 
		                <EditText
		                    android:id="@+id/et_secondLanguage"
		                    android:layout_width="0dp"
		                    android:layout_height="wrap_content"
		                    android:layout_weight="1"
		                    android:ems="10"
		                    android:hint="@string/add_custom_language_or"
		                    android:textSize="12sp" />
		-->
		<!--  New version -->
						<TextView
		                    android:id="@+id/tv_selectedSecondLanguage"
		                    android:layout_width="wrap_content"
		                    android:layout_height="wrap_content"
		                    style="@style/TextviewSelectedLanguage"
		                    android:layout_toLeftOf="@+id/btn_secondLanguage"
		                    android:layout_toRightOf="@id/tv_secondLanguage"/>
						
		                <Button
		                    android:id="@+id/btn_secondLanguage"
		                    android:layout_width="wrap_content"
		                    android:layout_height="wrap_content"
		                    android:onClick="onAddISOLanguageButton"
		                    android:text="@string/select_from_list"
		                    style="@style/ButtonChooseLanguage"
		                    android:layout_alignParentRight="true"/>
		         	</RelativeLayout>
	      
				</LinearLayout>
	        	<LinearLayout
			         android:id="@+id/layout_btnMoreLessLanguage"
			         android:layout_width="wrap_content"
			         android:layout_height="wrap_content" 
			         android:layout_gravity="center"
			         android:layout_marginTop="20dp"> 
			         
			        <Button
			            android:id="@+id/btn_addMoreLanguages"
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content"
			            android:layout_gravity="center_horizontal"
			            android:onClick="onClickMoreLanguages"
			            android:text="@string/more_languages"
			            style="@style/ButtonMoreLanguages"/>
			        
			        <Button
			            android:id="@+id/btn_lessLanguages"
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content"
			            android:layout_gravity="center_horizontal"
			            android:onClick="onClickLessLanguages"
			            android:text="@string/less_languages"
			            style="@style/ButtonLessLanguage"/>
				</LinearLayout>
		</LinearLayout>
	    <LinearLayout
	        android:id="@+id/layout_extraInformation"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        android:layout_margin="@dimen/activity_horizontal_margin" >
	
	        <TextView
	            android:id="@+id/edit_recording_lang"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:paddingTop="10dp"
	            android:text="@string/extra_information"
	            style="@style/TextviewMetadata1"
	            android:layout_marginBottom="20dp" />
	
	        <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content" >
	
	            <TextView
	                android:id="@+id/textView4"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/region_origin"
	                style="@style/TextviewMetadata2" />
	
	            <EditText
	                android:id="@+id/edit_region_origin"
	                android:layout_width="0dp"
	                android:layout_height="wrap_content"
	                android:layout_marginLeft="20dp"
	                android:layout_marginRight="20dp"
	                android:layout_weight="1"
	                android:ems="10"
	                android:textSize="18sp" />
	        
	        </LinearLayout> 
	    </LinearLayout>
	
	    <LinearLayout
	        android:id="@+id/layout_personalInformation"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical" 
	        android:layout_margin="@dimen/activity_horizontal_margin" >
	
	        <TextView
	            android:id="@+id/edit_mother_tongue"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:paddingTop="10dp"
	            android:text="@string/personal_information"
	            style="@style/TextviewMetadata1" 
	            android:layout_marginBottom="20dp"/>
	
		    <LinearLayout
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content" >
	
		        <TextView
		            android:id="@+id/edit_spkr_name"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/speaker_name"
		            style="@style/TextviewMetadata2" 
		            android:textColor="#6FA9C8"
		            android:textStyle="bold"/>
	
		        <EditText
		            android:id="@+id/edit_speaker_name"
		            android:layout_width="0dp"
		            android:layout_height="wrap_content"
		            android:layout_marginLeft="20dp"
		            android:layout_marginRight="20dp"
		            android:layout_weight="1"
		            android:ems="10"
		            android:inputType="textPersonName"
		            android:textSize="18sp" />
		        
		    </LinearLayout>
	
	        <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content" >
	
	            <TextView
	                android:id="@+id/textView6"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/age"
	                style="@style/TextviewMetadata2" />
	
	            <EditText
	                android:id="@+id/edit_speaker_age"
	                android:layout_width="0dp"
	                android:layout_height="wrap_content"
	                android:layout_marginLeft="20dp"
	                android:layout_marginRight="20dp"
	                android:layout_weight="1"
	                android:ems="10"
	                android:textSize="18sp" />

	        </LinearLayout>
	
	        <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content" >
	
	            <TextView
	                android:id="@+id/edit_extra_lang"
	                android:layout_width="100sp"
	                android:layout_height="wrap_content"
	                android:layout_gravity="center_vertical"
	                android:text="@string/gender"
	                style="@style/TextviewMetadata2" />
	
	            <RadioGroup
	                android:id="@+id/edit_radio_gender"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:orientation="horizontal" >
	                
	                <RadioButton
	                    android:id="@+id/radio_gender_male"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:checked="true"
	                    android:text="@string/radio_male"
	                    android:textSize="12sp" />
	
	                <RadioButton
	                    android:id="@+id/radio_gender_female"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:text="@string/radio_female"
	                    android:textSize="12sp" />
	
	            </RadioGroup>
	
	        </LinearLayout>
	    </LinearLayout>
	
	    <Button
	        android:id="@+id/button4"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:onClick="onOkButtonPressed"
	        android:text="@string/button_ok"
	        android:textSize="18sp"
	        android:textStyle="bold"
	        android:layout_marginTop="20dp"
	        android:textColor="#388E3C"/>

	</LinearLayout>
 </ScrollView>
