<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >
    
	<TableLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin">
	
		    <!-- Back button -->
		    <GridLayout
		       	android:layout_width="wrap_content"
				android:layout_height="wrap_content" 
				android:layout_gravity="left">
				<Button
					android:id="@+id/btn_goBack"
					android:layout_width="wrap_content"
					android:layout_height="match_parent"
					android:drawableLeft="@drawable/ic_undo_black_24dp"
					android:onClick="onBackPressed"
					android:text="@string/goBack"
					android:textColor="#D32F2F"
					android:layout_marginBottom="10dp" 
					android:layout_marginTop="10dp" />
			</GridLayout>
		
	    	<TextView
	    	    android:id="@+id/respeaking_title"
	    	    style="@style/MainTitle"
	    	    android:layout_width="wrap_content"
	    	    android:layout_height="wrap_content"
	    	    android:layout_marginBottom="20dp"
	    	    android:text="@string/respeakmode" />
	
			<View
			       android:layout_width="match_parent"
			       android:layout_height="0.2dp"
			       android:id="@+id/separator"
			       android:visibility="visible"
			       android:background="@android:color/darker_gray"
			       android:layout_marginBottom="30dp"/> 
	    
	    	<TextView
	    	    android:id="@+id/respeaktextView2"
	    	    style="@style/SecondTitle"
	    	    android:layout_width="wrap_content"
	    	    android:layout_height="wrap_content"
	    	    android:layout_marginBottom="50dp"
	    	    android:text="@string/selectanImportType" />
	    
	  	 <!-- Import Buttons -->
	          <RelativeLayout
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" 
	            android:layout_gravity="center" >
	        			    
			    <!-- Import from Aikuma app Button -->
			    <Button
			        android:id="@+id/btn_importFromAikuma"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_marginBottom="20dp"
			        android:drawableLeft="@drawable/aikuma_32"
			        android:onClick="onImportAudioClick"
			        android:text="@string/audio_import_from_aikuma"
			        android:textColor="#D32F2F"
			        android:layout_centerHorizontal="true" />
			    
				<TextView
				    android:id="@+id/tv_or"
				    style="@style/SecondTitle"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:layout_below="@id/btn_importFromAikuma"
				    android:layout_marginBottom="20dp"
				    android:layout_centerHorizontal="true"
				    android:text="or"
				    android:textSize="20sp"
				    android:textStyle="bold" />
				
				<!-- Import from phone Button -->
		    	<Button
			        android:id="@+id/btn_importFromPhone"
			        android:textColor="#D32F2F"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:drawableLeft="@drawable/ic_file_upload_black_24dp"
			        android:text="@string/audio_import_from_phone"
					android:onClick="onImportAudioClick" 
					android:layout_below="@id/tv_or"
					android:layout_centerHorizontal="true"/>
		    </RelativeLayout>
	
	
	
	</TableLayout>
    
</ScrollView>