<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="A session has been saved, would you like to retrieve it?"
        android:background="#4b7a98"
        android:textColor="#ffffff" 
        android:textSize="20dp"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingLeft="@dimen/activity_horizontal_margin" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sessionMode" 
                android:textStyle="bold"
                android:textColor="#6FA9C8" />

            <TextView
                android:id="@+id/session_mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView" 
            	android:paddingLeft="15dp"/>

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/session_submode" 
                android:textStyle="bold"
                android:textColor="#6FA9C8"  />

            <TextView
                android:id="@+id/session_submode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
            	android:paddingLeft="15dp" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sessionDate" 
                android:textStyle="bold" 
                android:textColor="#6FA9C8" />

            <TextView
                android:id="@+id/session_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView" 
            	android:paddingLeft="15dp"/>

        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sessionProgress" 
                android:textStyle="bold"
                android:textColor="#6FA9C8"  />

            <TextView
                android:id="@+id/session_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView" 
            	android:paddingLeft="15dp"/>

        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sessionInputFile" 
                android:textStyle="bold"
                android:textColor="#6FA9C8"  />

            <TextView
                android:id="@+id/session_input_file"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView" 
            	android:paddingLeft="15dp"/>

        </TableRow>

    </TableLayout>

</LinearLayout>
